--- a/image-hosting-system-core/src/main/resources/light.properties
+++ b/image-hosting-system-core/src/main/resources/light.properties
@@ -14,5 +14,7 @@
 # limitations under the License.
 #
 
-distributionUrl=https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.8.6/apache-maven-3.8.6-bin.zip
-wrapperUrl=https://repo.maven.apache.org/maven2/org/apache/maven/wrapper/maven-wrapper/3.1.0/maven-wrapper-3.1.0.jar
+light.image_host_system.url=jdbc:mysql://localhost:3306/
+light.image_host_system.username=root
+light.image_host_system.password=123456
+light.image_host_system.jdbcName=com.mysql.cj.jdbc.Driver
