--- a/image-hosting-system-core/pom.xml
+++ b/image-hosting-system-core/pom.xml
@@ -97,44 +97,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-
-
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-impl</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-jackson</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-client</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-hdfs</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
         </dependency>
@@ -149,6 +111,27 @@
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
             <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>space.lingu.image-hosting-system</groupId>
+            <artifactId>system-command</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>space.lingu.image-hosting-system</groupId>
+            <artifactId>image-hosting-system-configuration</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>space.lingu.image-hosting-system</groupId>
+            <artifactId>image-hosting-system-file-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>space.lingu.image-hosting-system</groupId>
+            <artifactId>image-hosting-system-hadoop</artifactId>
         </dependency>
 
         <!-- Code Generator Module -->
