--- a/image-hosting-system-core/src/main/resources/light.properties
+++ b/image-hosting-system-core/src/main/resources/light.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-light.image_host_system.url=jdbc:mysql://localhost:3306/
+light.image_host_system.url=jdbc:mysql://192.168.44.132:3306/
 light.image_host_system.username=root
 light.image_host_system.password=123456
 light.image_host_system.jdbcName=com.mysql.cj.jdbc.Driver
