--- a/image-hosting-system-core/src/main/resources/application.yml
+++ b/image-hosting-system-core/src/main/resources/application.yml
@@ -25,6 +25,7 @@ spring:
     port: 465
     username: disable
     password: disable
+
   servlet:
     multipart:
       enabled: true
@@ -33,6 +34,9 @@ spring:
   mvc:
     path match:
       matching-strategy: ant_path_matcher
+
+  cache:
+    type: caffeine
 
 swagger:
   enable: true
